syntax = "proto3";

package io.pranludi.server.protobuf.service;

option java_package = "io.pranludi.server.protobuf.service";

import "service-entities.proto";

service MemberService {
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc ChangeName (ChangeNameRequest) returns (ChangeNameResponse) {}
}

message LoginRequest {
}

message LoginResponse {
  MemberStateDTO member_state = 1;
}

message ChangeNameRequest {
  string name = 1;
}

message ChangeNameResponse {
  MemberNameDTO member_name = 1;
}
